--- a/FRONT/public/componentes/Login/src/css/login.css
+++ b/FRONT/public/componentes/Login/src/css/login.css
@@ -1,37 +1,49 @@
-body{
-    
-    height: 700px;
+html,body{
+    margin: 0px !important;
+    padding:0px !important;
+    max-width : 100vw;
+    min-width:  100vw;
+    max-height: 100vh;
+    min-height: 100vh;
+    box-sizing: border-box;
 }
 
 
 #login{
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
     background-color: aqua;
     background: url("./../images/PAFF_112718_touchmemory-1024x705-transformed.jpeg") no-repeat center/cover;
-    background-size: 100% 100%   ;
+    background-size: 100% 100%  ;
 }
+
 #compoCentral{
-    width: auto;
-    height: auto;
+    width: 100px;
+    height: 220px;
+    padding:50px;
     position: relative;
-    margin-bottom: 17%;
-    margin-left: 3.5%;
+    
+    border-radius: 20px;
+    
+    position: relative;
+    margin-bottom: 12.2%;
+    margin-left: 3.9%;
+    transition: all 2s;
 }
 #imgSesion{
-    position: relative;
+    
     width:80px;
     height: 80px;
     border-radius: 60px;
     padding: 5px;
-    border: 2px solid rgb(209, 22, 22);
+    border: 1px dashed rgb(128, 111, 228);
     
 }
 #imgSesion:hover{
-    border: 2px solid white;
+    border: 1px solid white;
     cursor: pointer;
     /* background: filter(rgba(160, 89, 89, 0.801)); */
 }
@@ -42,7 +54,7 @@ body{
     text-shadow: 1px 1px 2px white, 1px 1px 1px whitesmoke;
     background-color: rgb(243, 236, 236);
     border-radius: 10px;
-    transition: all 1s;
+    transition: all 2s;
 }
 #usuario:hover{
     background-color: rgb(49, 48, 48);
@@ -84,4 +96,11 @@ body{
 #enviar:hover{
     background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
     color: white;
+}
+
+.show{
+    background-color: #3d39af;
+    border:1px solid rgba(232, 234, 236, 0.829);
+    box-shadow: 2px 2px 2px rgb(54, 13, 119), 2px 2px 2px rgb(20, 6, 83), 2px 2px 2px white;
+    
 }
