--- a/FRONT/public/src/css/barraT.css
+++ b/FRONT/public/src/css/barraT.css
@@ -18,6 +18,7 @@
     margin-left: 3px;
     padding: 1px;
     border-right: 1px solid white;
+    position: relative;
     transition: all 500ms;
 }
 
