--- a/FRONT/public/src/css/btnInicio.css
+++ b/FRONT/public/src/css/btnInicio.css
@@ -1,12 +1,45 @@
 
 .inicioDesplegable{
     display: none;
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 500px;
     z-index: 2;
-    position: relative;
-    background-color: red;
+    background-color: rgba(52, 50, 50, 0.879);
+    position: absolute;
+    top: 0;
+    transform: translate(0, -100%);
+    border-radius: 5px 20px 20px 0px;
+    margin-left: -3px;
+    
 }
 .show{
     display: block;
+}
+
+#headDesplegable{
+    width:  100%;
+    height: 70px;
+    background-color: rgb(75, 74, 74);
+    border-radius: 5px 20px 0px 0px;
+}
+
+.iconoDesplegable{
+    width:65px;
+    height:60px;
+    margin-left: 3px;
+    padding-left: 10px;
+    padding-top: 8px;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    border-radius: 5px;
+    border-right: 1px solid white;
+    transition: all 500ms;
+}
+
+.iconoDesplegable:hover{
+    /* border: 1px dashed rgb(116, 116, 222); */
+    filter: drop-shadow(0 0 3px rgba(229, 233, 228, 0.921));
+    color: rgb(214, 199, 239);
+    cursor: pointer;
 }
