--- a/FRONT/public/src/css/ventana.css
+++ b/FRONT/public/src/css/ventana.css
@@ -1,7 +1,7 @@
 
 .ventana{
-    width: 100vw;
-    height: 100vh;
+    width: 50vw;
+    height: 50vh;
     background-color: rgb(100, 105, 103);
     z-index: 2;
     position: absolute;
@@ -35,27 +35,26 @@
 
 
 
-
+/*los tres bnes de minimizar maximizar y cerrar*/
 .iconFijoVentana div img{
     width: 20px;
     height: 20px;
 }
 
+/*minimizar ventana--------------------------*/
 .minimizar{
-    width: 200px !important;
-    height:200px !important;
+    display: none !important;
     
 }
 
-@keyframes minimizado{
-    
-    from{
-        
-    }
-    
-    
-    to{
+.ventanaMovimiento{
+    background-color: rgba(48, 46, 47, 0.616)
+    ;
+}
 
-    }
-    
+.ventanaNewPosition{
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
