chore(JTB/Front):agrego de la entrada de datos del servidor y agrego y manejo de la ventana de explorador de archivos:

--- a/FRONT/public/src/css/styles.css
+++ b/FRONT/public/src/css/styles.css
@@ -5,6 +5,7 @@ html,body{
     min-height: 100%;
     padding: 0px !important;
     margin : 0px !important;
+    overflow: hidden !important;
 }
 
 /* escritorio */
