--- a/FRONT/public/src/css/ventana.css
+++ b/FRONT/public/src/css/ventana.css
@@ -1,8 +1,12 @@
 
 .ventana{
-    width: 100vw;
-    height: 100vh;
+    width: 99vw;
+    height: 99vh;
     background-color: rgb(100, 105, 103);
+    border-left: 4px solid rgba(235, 243, 240, 0.883); 
+    border-right: 4px solid rgba(235, 243, 240, 0.883); 
+    border-bottom: 4px solid rgba(235, 243, 240, 0.883); 
+    border-radius: 10px 10px 0px 0px;
     z-index: 2;
     position: absolute;
 
@@ -34,8 +38,7 @@
 }
 
 
-
-/*los tres bnes de minimizar maximizar y cerrar*/
+/*los tres btnes de minimizar maximizar y cerrar*/
 .iconFijoVentana div img{
     width: 20px;
     height: 20px;
@@ -48,13 +51,29 @@
 }
 
 .ventanaMovimiento{
-    background-color: rgba(48, 46, 47, 0.616)
-    ;
+    background-color: rgba(48, 46, 47, 0.616);
 }
 
-.ventanaNewPosition{
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+
+
+/*ventana de equipo*/
+.headDirectorio{
+    width: 98.5%;
+    height: 20px;
+    background-color: rgba(212, 198, 198, 0.623);
+    color: black;
+    margin-top: 2px;
+    margin-left: 5px; 
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.cuerpoVentana{
+    width: 100%;
+    height: auto;
+}
+
+.transparente{
+    background-color: transparent !important;
+    border: 2px solid rgba(37, 36, 36, 0.849);;
 }
